# agent-team

./: .env.example  .gitignore  AGENT.md  Dockerfile  README.md  config.yaml  dev.ps1  docker-compose.yml  install.sh  pyproject.toml  start-app.sh  start.sh
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: agents.py  artifacts.py  auth.py  authz.py  execution_results.py  flow_schemas.py  flows.py  health.py  messages.py  observability.py  planning.py  roundtable.py  security.py  settings.py  skills.py  tools.py  usage.py  workspaces.py
backend/app/core/: auth.py  config.py  database.py  security.py  yaml_config.py
backend/app/llm/: router.py
backend/app/models/: models.py
backend/app/services/: agents.py  artifact.py  context.py  event_bus.py  execution.py  heartbeat.py  image_generation.py  liveness.py  memory.py  orchestrator.py  security.py  session_manager.py  skill_registry.py  token_estimation.py  tools.py  workspace_flow.py
cli/: README.md  execution_plan.json  execution_result_exec_2b88a562f432.json  pyproject.toml
cli/agent_team/: cli.py
cs/: deployment-conclusion-20260508-120738.md  product-conclusion-20260508-115912.md  requirements-conclusion-20260508-114818.md  technical-conclusion-20260508-120608.md  ui_direction-conclusion-20260508-120433.md
design-system/agent-team/: MASTER.md
docs/: desktop-app-mvp.md  functional-requirements.md  mvp-technical-design.md  requirements.md  usage-guide.md  workspace-development-progress.md
docs/superpowers/specs/: 2026-05-06-platform-restructure-checklist.md  2026-05-06-workspace-frontstage-redesign-design.md  2026-05-07-skill-package-analyzer-mvp-design.md  2026-05-08-workspace-stage-model-design.md  2026-05-08-workspace-stage-model-notes.md  2026-05-09-workspace-stage-document-guidance-design.md  2026-05-14-stage-expert-group-design.md
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/electron/: main.cjs  preload.cjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: chat-input-bar.tsx
frontend/src/hooks/: use-available-models.ts
frontend/src/lib/: api.ts  auth.tsx
skills/: code_execute.md  code_review.md  code_search.md  planning.md  task_management.md  web_search.md
skills/frontend-ui-taste/: SKILL.md
skills/frontend-ui-taste/agents/: openai.yaml
src/team_agent/: __init__.py  cli.py  config.py
src/team_agent/agents/: base.py  (+5 more)
(+62 files in other folders)
