[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "team-agent"
version = "0.1.0"
description = "A multi-agent collaboration framework with pluggable LLMs, skills, and memory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[project.scripts]
team-agent = "team_agent.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
