[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-team"
version = "0.1.0"
description = "Team Agent CLI - Execute AI-generated plans locally with LLM-powered code generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Agent Team" },
]
keywords = ["ai", "agent", "cli", "code-generation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
agent-team = "agent_team.cli:cli"

[project.urls]
Homepage = "https://github.com/agent-team/agent-team"
Repository = "https://github.com/agent-team/agent-team"
